--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,5 @@ body {
 	margin: 0;
 	font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
 		'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	background-color: #e8e8e8;
 }
