--- a/src/components/Calendar/calendar.css
+++ b/src/components/Calendar/calendar.css
@@ -7,6 +7,7 @@
 	gap: 24px;
 	padding: 12px;
 	box-sizing: border-box;
+	padding-bottom: 64px;
 }
 
 /* Контейнер для элементов календаря */
@@ -22,7 +23,7 @@
 }
 
 .calendar__box_cup {
-	background-color: #1d0b0b; /* Белый фон для блока */
+	background-color: rgb(178, 6, 28, 0.2); /* Белый фон для блока */
 	border: 0.1px solid rgb(255, 255, 255, 0.5);
 	/* border-radius: 10px; */
 	/* box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1); */
