--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,13 +1,33 @@
 .header {
-	padding: 10px 20px;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 64px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 10px 0 0 0;
 	background-color: #070e13;
-	border-bottom: 0.1px solid rgb(255, 255, 255, 0.5);
+	border-top: 0.1px solid rgb(255, 255, 255, 0.5);
 }
 
 .header__logo {
+	width: 100%;
+	max-width: 360px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 	color: #fff;
-	font-size: 18px;
+	font-size: 48px;
 	font-weight: bold;
+}
+
+.header__home,
+.header__table,
+.header__blog {
+	color: rgb(178, 6, 28, 0.4);
 }
 
 .header__nav {
