add table and block, correct css

--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,6 +1,10 @@
 h2 {
+	width: 100%;
 	font-size: 1.2rem;
-	margin-bottom: 12px;
+	margin-bottom: 2px;
+	/* color: #b2061c; */
+	background-color: #b2061c;
+	padding: 8px 0;
 }
 .table {
 	display: flex;
@@ -14,7 +18,8 @@ h2 {
 	padding-bottom: 88px;
 }
 
-.table__box {
+.table__box,
+.table__box_cup {
 	width: 100%;
 	max-width: 360px;
 	display: flex;
@@ -29,8 +34,62 @@ h2 {
 
 .table__item {
 	width: 100%;
+	height: 16px;
 	display: grid;
-	grid-template-columns: 1fr 4fr 1fr 1fr 1fr 2fr;
+	align-items: center;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 2fr;
 	font-family: Arial, sans-serif;
 	font-size: 16px;
+	padding-bottom: 8px;
+	border-bottom: 0.1px solid rgb(255, 255, 255, 0.4);
+}
+
+.table__item_akron {
+	width: 100%;
+	height: 16px;
+	display: grid;
+	align-items: center;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 2fr;
+	font-family: Arial, sans-serif;
+	font-size: 16px;
+	/* color: #b2061c; */
+	background-color: #b2061c;
+	padding: 8px 0;
+	border-bottom: 0.1px solid rgb(255, 255, 255, 0.4);
+}
+
+.table__team {
+	display: flex;
+}
+
+/* Кубок РФ */
+
+.table__item_cup {
+	width: 100%;
+	height: 16px;
+	display: grid;
+	align-items: center;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 2fr;
+	font-family: Arial, sans-serif;
+	font-size: 16px;
+	padding-bottom: 8px;
+	border-bottom: 0.1px solid rgb(255, 255, 255, 0.4);
+}
+
+.table__item_akroncup {
+	width: 100%;
+	height: 16px;
+	display: grid;
+	align-items: center;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 2fr;
+	font-family: Arial, sans-serif;
+	font-size: 16px;
+	/* color: #b2061c; */
+	background-color: #b2061c;
+	padding: 8px 0;
+	border-bottom: 0.1px solid rgb(255, 255, 255, 0.4);
+}
+
+.table__team_cup {
+	display: flex;
 }
