--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -37,7 +37,7 @@ h2 {
 	height: 16px;
 	display: grid;
 	align-items: center;
-	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 2fr;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 2fr 2fr;
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	padding-bottom: 4px;
@@ -49,7 +49,7 @@ h2 {
 	height: 16px;
 	display: grid;
 	align-items: center;
-	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 2fr;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 2fr 2fr;
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	/* color: #b2061c; */
@@ -69,7 +69,7 @@ h2 {
 	height: 16px;
 	display: grid;
 	align-items: center;
-	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 2fr;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 1fr 2fr 2fr;
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	padding-bottom: 4px;
@@ -81,7 +81,7 @@ h2 {
 	height: 16px;
 	display: grid;
 	align-items: center;
-	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 2fr;
+	grid-template-columns: 1fr 5fr 1fr 1fr 1fr 1fr 1fr 2fr 2fr;
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	/* color: #b2061c; */
